<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Camera Diary</string>
	<string name="new_event">New Event</string>
	<string name="new_item">New Item</string>
	<string name="edit_event">Edit Event</string>
	<string name="edit_item">Edit Item</string>
	<string name="view_event">Event</string>
	<string name="all_events">All Events</string>
	<string name="show_map">Show Map</string>
	<string name="exit">Exit</string>
	<string name="home">Home</string>
	<string name="search">Search</string>
	<string name="camera_alert">Device has only one camera!</string>
	<string name="switch_cam">Switch Camera</string>
	<string name="capture_photo">Capture Photo</string>
	
	<string name="event">Event</string>
	<string name="description">Description</string>
	<string name="date">Date</string>
	
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="confirm_delete">Are you sure you want to delete this?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="mark_as_complete">Mark as Complete</string>
	<string name="confirm_mark_as_complete">Are you sure?</string>

	<string name="search_label">Search diary</string>
	<string name="search_hint">Search</string>
	<string name="menu_search">Search</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_show_map">Show Map</string>
	<string name="settings_description">Definitions of words</string>
	<string name="search_instructions">Press the search key to look up a word</string>
	<plurals name="search_results">
		<item quantity="one">%1$d result for \"%2$s\": </item>
		<item quantity="other">%1$d results for \"%2$s\": </item>
	</plurals>
	<string name="no_results">No results found for \"%s\"</string>
</resources>