<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#fff">

	<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:paddingRight="4px">
		
		<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/event"
				style="@style/FormLabel" />
		<EditText android:id="@+id/event"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
		 />
		 
		 <TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/date"
				style="@style/FormLabel" />
		<Button android:id="@+id/btn_date" android:text="Change the date"
			android:textSize="25sp"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
			
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#a1a1a1"
			android:paddingTop="5dp">
			<Button android:id="@+id/save" android:text="@string/save" android:layout_weight="50"
				android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="120px"  />
			<Button android:id="@+id/cancel" android:text="@string/cancel" android:layout_weight="50"
				android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="120px" />
		</LinearLayout>
	</LinearLayout>
	
</LinearLayout>
