<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#fff">

	<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				>
			<TextView android:layout_width="fill_parent" android:id="@+id/description_label"
					android:layout_height="wrap_content" android:text="@string/description"
					style="@style/FormLabel" />
			<TextView  android:id="@+id/description_view"
				android:singleLine="false"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="top"
				android:paddingLeft="10px"
				android:paddingRight="10px"
				android:background="@drawable/border"
				android:textColor="#000"
				android:textStyle="bold"
				android:paddingTop="10dp"
			/>
			<EditText android:id="@+id/description"
				android:lines="4"
				android:singleLine="false"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="top"
			 />
			<ImageView
		        android:id="@+id/photo_image"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:adjustViewBounds="true"
		        android:scaleType="center"
		        android:layout_margin="5dp" 
		        android:visibility="gone" />
		    <Button android:layout_width="fill_parent"
	    		android:id="@+id/add_photo"
	    		android:drawableTop="@android:drawable/ic_menu_camera"
	    		android:text="@string/capture_photo"
				android:layout_height="wrap_content" />
			<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:background="#a1a1a1" android:id="@+id/buttons_container"
				android:paddingTop="5dp" android:gravity="bottom">
				<Button android:id="@+id/save" android:text="@string/save" android:layout_weight="50"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="120px"  />
				<Button android:id="@+id/cancel" android:text="@string/cancel" android:layout_weight="50"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="120px" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>